--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,9 @@
 @charset "utf-8";
+a,
+a:hover{
+    color: black;
+    text-decoration: none;
+}
 .header-contents {
     border-bottom: solid 2px #C4C4C4;
 }
